Fix button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ body {
   /* transition: .25s box-shadow linear; */
   text-decoration: none;
   color: black;
+  border: 2px solid rgba(0, 0, 0, 0);
 }
 
 .button.back {
